# GhostPlane

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  config.yaml  coverage_proxy.html  debug_priv.go  docker-compose.yml  go.mod  go.sum  test_nginx.conf
.agent/workflows/: comp-test.md  onboarding.md
.github/workflows/: ci.yml
cmd/nlb/: main.go  main_test.go
copilot/: .coverage  pyproject.toml
copilot/src/: agent.py  main.py
copilot/src/prompts/: rca_prompt.txt
copilot/src/reasoning/: chain_logger.py
copilot/src/tools/: config.py  config_gen.py  logs.py  metrics.py  migration.py  predictive.py  rca.py
copilot/tests/: test_agent.py  test_logs.py  test_metrics.py  test_migration.py  test_predictive.py  test_rca.py
data/: nlb.db
docs/: PROJECT_STRUCTURE.md  USP.md
docs/api/: openapi.yaml
docs/architecture/: README.md  tecnical-arch.md
docs/runbooks/: incident-response.md
docs/sprints/: implementation_plan1.md  implementation_plan2.md  implementation_plan3.md  implementation_plan4.md  reference_flows.md  roadmap.md  sprint-13-template-gallery.md  sprint-5-l7-proxy.md  sprint-6-l4-ebpf.md
docs/ui-ux/: accessibility-responsive.md  component-specs.md  copilot-ux.md  design-system.md  security-dashboard-ux.md  ux-patterns.md
ml/inference/: engine.go
ml/training/: train_anomaly.py
pkg/api/: server.go  (+1 more)
scripts/: build.sh  deploy.sh  dummy_servers.go  load_tester.go  stop.sh  verify_templates.sh
ui/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
(+91 files in other folders)
